# music-collector

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  apple-music-tools.command  auth.py  bootstrap-apple-music-login.command  bootstrap-apple-music-login.sh  clean.sh  com.music-collector.apple-music-manual.plist  com.music-collector.apple-music-manual.plist.example  com.music-collector.plist  com.music-collector.plist.example  docker-compose.yml  pyproject.toml  recover-apple-music-sync.command  recover-apple-music-sync.sh  run-scheduled.sh  run.sh  sync-apple-music.command  sync-apple-music.sh
.github/workflows/: ci.yml  test.yml
src/music_collector/: __main__.py  backup.py  clean.py  config.py  db.py  export.py  health.py  main.py  notify.py  spotify.py  stats.py  tunemymusic.py  web.py
src/music_collector/apple_music/: __init__.py  api.py  auth_server.py  browser.py  playlist.py  transfer.py
src/music_collector/scrapers/: __init__.py  bandcamp.py  base.py  complex.py  consequence.py  gorillavsbear.py  lineofbestfit.py  nme.py  pitchfork.py  quietus.py  residentadvisor.py  rollingstone.py  slant.py  spin.py  stereogum.py
tasks/: apple-music-token-plan.md
tests/: conftest.py  test_apple_music_api.py  test_notify.py  test_spotify.py
tests/scrapers/: conftest.py  test_bandcamp.py  test_base.py  test_complex.py  test_consequence.py  test_gorillavsbear.py  test_lineofbestfit.py  test_nme.py  test_pitchfork.py  test_quietus.py  test_residentadvisor.py  test_rollingstone.py  test_slant.py  test_spin.py  test_stereogum.py
(+10 files in other folders)
